--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
 .icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-github:before {content: '\f09b'; }/* 'github' */
 .icon-up:before { content: '\f176'; } /* '' */
 
 /* CUSTOM RESETS
@@ -566,6 +567,7 @@ html, body {
 a.twitter-bg:hover {color: #55acee;}
 a.facebook-bg:hover{color: #3b5998;}
 a.gplus-bg:hover{color: #007bb5;} 
+a.github-bg:hover {color: #acacac}
 a.linkedin-bg:hover {color: #dd4b39;}
 a.icon-up-bg:hover {color: #212121;}
 
