--- a/src/components/ProfileCard/styles.css
+++ b/src/components/ProfileCard/styles.css
@@ -23,19 +23,25 @@ body {
 }
 
 .card {
-  width: 360px;
-  /height: 180px;
-  background-color: #fff;
+  --width: 720px;
+  --height: 280px;
+  filter: blur(0.1px);
+  --background-image: linear-gradient(to top left,rgba(255,255,255,0),rgba(255,255,255,1));
+  --box-shadow:  0px 10px 20px #000000;
+    box-shadow:  1px 0px 10px #000000;
+  --border: 0.1px solid white;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 90px 360px 120px 240px;
   padding-top: 25px;
   cursor: pointer;
   justify-content: space-between;
   padding-bottom: 15px;
+  
 }
 
 .card-header {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,6 +50,7 @@ body {
   width: 100px;
   height: 100px;
   position: relative;
+  
 }
 
 .user-online-indicator {
@@ -67,6 +74,7 @@ body {
 .profile-name h1 {
   font-size: 28px;
   font-weight: 500;
+  /*color: white;*/
 }
 .profile-role {
   color: #6d6d6d;
@@ -94,6 +102,7 @@ body {
   border-radius: 50%;
   font-size: 23px;
   margin: 0 20px;
+    box-shadow:  0px 10px 20px #000000;
 }
 
 
