--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+background-image:url("./images/back1.jpg");
 	line-height: 1;
 }
 ol, ul {
